# AI_assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  tests.py
alembic/: env.py
alembic/versions/: 3263a062d681_create_user_table.py  b9f1c2e3d4a5_add_name_fields_to_user.py
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  PdfUploader.tsx
frontend/src/context/: AssessmentContext.tsx  AuthContext.tsx
frontend/src/layouts/: AppLayout.tsx  PublicLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AssessmentPage.tsx  ChatPage.tsx  IngestPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/logic_graph/: __init__.py  app.py  config.py  llm_factory.py  models.py  state.py
src/logic_graph/api/: deps.py  main.py
src/logic_graph/auth/: __init__.py  backend.py  manager.py  models.py  schemas.py
src/logic_graph/db/: engine.py
src/logic_graph/ingest/: __init__.py  captioning.py  clients.py  config.py  document.py  embeddings.py  indexing.py  search.py
src/logic_graph/mcp_rag/: __init__.py  server.py
src/logic_graph/memory/: __init__.py  long_term.py  short_term.py
src/logic_graph/nodes/: __init__.py  agent.py  crisis.py  (+4 more)
tests/: conftest.py  test_integration.py  test_memory.py  test_models.py  test_routing.py
tests/test_api/: conftest.py  test_auth.py  test_chat.py
tests/test_nodes/: test_agent.py  test_context_loader.py  test_crisis.py  test_crisis_agent.py
(+22 files in other folders)
